<resources>
    <string name="app_name">研发中心</string>
    <string name="main">首页</string>
    <string name="examine">考核</string>
    <string name="join_us">加入我们</string>
    <string name="enroll">报名</string>
    <string name="author">关于作者</string>
    <string name="logo">研发图案</string>
    <string name="sign_up">去注册</string>
    <string name="yourRDC">你的研发</string>
    <string name="go_login">去登录</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="image_is_blank">image is blank</string>
    <string name="group">工作室组别</string>
    <string name="android">安卓</string>
    <string name="web">前端</string>
    <string name="service">后台</string>
    <string name="cell_number">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="data_introduction">信息爆炸，身处于互联网时代的我们怎能视庞大的数据而不见。研发中心大数据组致力于挖掘数据、分析数据。既专注于基础，又落实于项目；既沉浸于原理，又回归到兴趣。大数据组是研发中心最年轻的小组，但我们拥有更多的可能去开拓、去创造无限的可能。\n\n研发大数据组采取自由学习，定期交流的模式。我们鼓励大家向自己感兴趣的方向大胆的探索，同时通过小组交流，一方面督促组员不断学习，另一方面组员之间互相汲取经验，在各自的空间中充分发挥。因为年轻，所以无限可能，只要你愿意为你的梦想付出努力，研发定为你的破浪前行而喝彩。\n\n如果你对人工智能充满了向往，对深度学习充满兴趣，无惧抽象的数学，志在拥抱最前沿的技术；如果你善于自主钻研，有责任感，以及良好的团队合作精神和分享精神；如果你厌倦平凡机械的生活，享受对未知的探索与前行；请大胆的选择我们大数据组，丰富的资源，和谐的氛围，只为让你成为研发新的闪亮点！\n\n</string>
    <string name="web_introduction">RDC Web前端开发组，基于HTML/CSS/Javascript前端语言进行开发，专注于呈现良好的网站界面和网页交互，提供给用户更好的视觉冲击和用户体验，是当前就业面最广的方向。组内定期开展技术分享会，与此同时，一些已经进入阿里、腾讯实习工作的师兄师姐也会经常与我们进行经验交流和指导。在技术实力雄厚的同时，最重要的一点是，我们有最和谐的性别比例和不能更融洽的相处气氛，宇宙工大之下，可谓出淤泥而不染，实属难得。\n\n我们需要：基本的C语言理解，0或0以上的前端基础，不止的学习热忱，出色的学习能力，良好的全局把控力，还有最重要的一点是，细腻。当然，如果你有良好的审美或是一定的PS基础，那面试时可能会获得一定印象分哦~\n\n假如你曾想过给自己写一个符合自己所有想象的个人主页；假如你曾想过在一个特殊的日子里用网页的形式给喜欢的人送上一份特殊的礼物；又或者你曾想过会有一个网页，当你打开的时候，里面用着你最喜欢的表达方式，写满了你的全部故事。\n\n那就来我们这试一试。\n\n是的，研发前端组，一个情怀和实力兼具的队伍。\n\n如果你是一个充满想象的人，过来拥抱我们。\n\n</string>
    <string name="java_introduction">研发后台小组一直致力于JavaWeb开发，专注于各种前沿的Java技术学习和实践能力的结合，主要任务是进行业务逻辑的处理和与数据库、服务器等的交互。我们在网络建设、网络改版、数据处理，数据交互等方面都积累了自己独特的经验并取得了良好的成绩。后台开发与各小组相辅相成，无论是安卓端还是网页端，都需要后台技术的支持，只有和服务器进行沟通，才能成为一个完整的产品。\n\n研发后台采用自主学习，自由学习，积极交流的模式，组员各有所长。后台组鼓励组员拓宽学习范围，均衡发展。组内经常举行内部交流，定期举行内部活动，从而提升技术，增进彼此感情。\n\n如果你具备基本的C语言基础、对Java编程感兴趣，具有满腔的学习热情，出色的学习能力以及良好的团队协作精神，想学习数据库和服务器，想成为一个幕后操作者，那么研发后台组是你的不二选择。\n\n</string>
    <string name="android_introduction">RDC Android开发组，是RDC工作室安卓App项目的核心研发团队，专注基于Java语言的主流app开发与Android技术的钻研。我们采用自由高效的管理模式、自由的时间安排，定期的技术分享会与师兄经验交流会等；拥有融洽的技术氛围，遇到技术难题，随时提问，一起探讨解决方法；培养友好的内部关系，消除年级隔阂，和谐相处。\n研发Android组有着一群志同道合的朋友，跟你一起探索Android的神秘王国，深入学习Java和Android。除了项目之外，倘若你还有其他新颖可行的想法，还能开发出各种炫酷的App或是小游戏给大家使用。\n假如你热爱技术、热爱Android，拥有扎实的C语言基础（有Java或Android基础更佳），善于自主钻研，有责任感并有良好的团队合作精神，那么，你正是我们苦苦寻找的小伙伴！加入我们吧，不仅能感受浓厚的学习氛围、还能积累项目经验、更有可能获得师兄的内推机会哟\n</string>
    <string name="yanfa_introduction">研发中心创设于学院成立之初，积淀丰富、历史悠久，是计算机学院最为老牌的一个团队。\n2001年，研发中心成立，至今已经18年历史，是计算机学院的一个老牌团队。这么多年来，团队成员一直致力于互联网、安卓手机应用、数据库以及图形图像等技术的学习和开发。我们在基本专业课程和技能训练的基础上，通过项目过程的进一步学习，提高自身解决问题的能力、学习能力以及团队协作能力。\n团队已有大批师兄师姐进入了百度、腾讯、华为、网易、阿里巴巴、金山等公司进行工作。\n这里有优秀的学习榜样、丰富的学习资源、良好的学习氛围、珍贵的项目经验，还有活跃愉快的相处气氛。如果你有出色的学习能力、对知识有近乎渴望的追求，以及良好的抗压力和团队协作力，那就加入我们吧！在这里和你的队友们一起打造属于你们的BAT之路！</string>
    <string name="large_text">\"Material is the metaphor.\\n\\n\"          \"A material metaphor is the unifying theory of a rationalized space and a system of motion.\"         \"The material is grounded in tactile reality, inspired by the study of paper and ink, yet \"         \"technologically advanced and open to imagination and magic.\\n\"         \"Surfaces and edges of the material provide visual cues that are grounded in reality. The \"         \"use of familiar tactile attributes helps users quickly understand affordances. Yet the \"         \"flexibility of the material creates new affordances that supercede those in the physical \"         \"world, without breaking the rules of physics.\\n\"         \"The fundamentals of light, surface, and movement are key to conveying how objects move, \"         \"interact, and exist in space and in relation to each other. Realistic lighting shows \"         \"seams, divides space, and indicates moving parts.\\n\\n\"          \"Bold, graphic, intentional.\\n\\n\"          \"The foundational elements of print based design typography, grids, space, scale, color, \"         \"and use of imagery guide visual treatments. These elements do far more than please the \"         \"eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge \"         \"imagery, large scale typography, and intentional white space create a bold and graphic \"         \"interface that immerse the user in the experience.\\n\"         \"An emphasis on user actions makes core functionality immediately apparent and provides \"         \"waypoints for the user.\\n\\n\"          \"Motion provides meaning.\\n\\n\"          \"Motion respects and reinforces the user as the prime mover. Primary user actions are \"         \"inflection points that initiate motion, transforming the whole design.\\n\"         \"All action takes place in a single environment. Objects are presented to the user without \"         \"breaking the continuity of experience even as they transform and reorganize.\\n\"         \"Motion is meaningful and appropriate, serving to focus attention and maintain continuity. \"         \"Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\\n\\n\"          \"3D world.\\n\\n\"          \"The material environment is a 3D space, which means all objects have x, y, and z \"         \"dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the \"         \"positive z-axis extending towards the viewer. Every sheet of material occupies a single \"         \"position along the z-axis and has a standard 1dp thickness.\\n\"         \"On the web, the z-axis is used for layering and not for perspective. The 3D world is \"         \"emulated by manipulating the y-axis.\\n\\n\"          \"Light and shadow.\\n\\n\"          \"Within the material environment, virtual lights illuminate the scene. Key lights create \"         \"directional shadows, while ambient light creates soft shadows from all angles.\\n\"         \"Shadows in the material environment are cast by these two light sources. In Android \"         \"development, shadows occur when light sources are blocked by sheets of material at \"         \"various positions along the z-axis. On the web, shadows are depicted by manipulating the \"         \"y-axis only. The following example shows the card with a height of 6dp.\\n\\n\"          \"Resting elevation.\\n\\n\"          \"All material objects, regardless of size, have a resting elevation, or default elevation \"         \"that does not change. If an object changes elevation, it should return to its resting \"         \"elevation as soon as possible.\\n\\n\"          \"Component elevations.\\n\\n\"          \"The resting elevation for a component type is consistent across apps (e.g., FAB elevation \"         \"does not vary from 6dp in one app to 16dp in another app).\\n\"         \"Components may have different resting elevations across platforms, depending on the depth \"         \"of the environment (e.g., TV has a greater depth than mobile or desktop).\\n\\n\"          \"Responsive elevation and dynamic elevation offsets.\\n\\n\"          \"Some component types have responsive elevation, meaning they change elevation in response \"         \"to user input (e.g., normal, focused, and pressed) or system events. These elevation \"         \"changes are consistently implemented using dynamic elevation offsets.\\n\"         \"Dynamic elevation offsets are the goal elevation that a component moves towards, relative \"         \"to the component’s resting state. They ensure that elevation changes are consistent \"         \"across actions and component types. For example, all components that lift on press have \"         \"the same elevation change relative to their resting elevation.\\n\"         \"Once the input event is completed or cancelled, the component will return to its resting \"         \"elevation.\\n\\n\"          \"Avoiding elevation interference.\\n\\n\"          \"Components with responsive elevations may encounter other components as they move between \"         \"their resting elevations and dynamic elevation offsets. Because material cannot pass \"         \"through other material, components avoid interfering with one another any number of ways, \"         \"whether on a per component basis or using the entire app layout.\\n\"         \"On a component level, components can move or be removed before they cause interference. \"         \"For example, a floating action button (FAB) can disappear or move off screen before a \"         \"user picks up a card, or it can move if a snackbar appears.\\n\"         \"On the layout level, design your app layout to minimize opportunities for interference. \"         \"For example, position the FAB to one side of stream of a cards so the FAB won’t interfere \"         \"when a user tries to pick up one of cards.\\n\\n\"</string>


    <string name="name">"姓名:"</string>
    <string name="gender">"性别:"</string>
    <string name="boy">"男"</string>
    <string name="girl">"女"</string>
    <string name="student_number">"学号:"</string>
    <string name="faculty">"学院:"</string>
    <string name="major">"专业:"</string>
    <string name="grade">"班级:"</string>
    <string name="qq">"QQ:"</string>
    <string name="phone_number">"手机号码:"</string>
    <string name="direction">"报名方向:"</string>
    <string name="java">"后台"</string>
    <string name="Web">"前端"</string>
    <string name="Android">"Android"</string>
    <string name="big_data">"大数据  "</string>
    <string name="self_introduction">"自我介绍:"</string>
    <string name="set_up">"开启我的研发之旅"</string>
    <string name="verification_code">请输入验证码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="sign_in_yanfa">登录研发中心</string>
    <string name="join_yanfa">加入研发中心</string>
    <string name="yanfa_name">RDC研发中心</string>
    





</resources>
