<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:id="@+id/center_point"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEditText_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/center_point"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:hint="@string/cell_number"
            android:inputType="number"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEditText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/center_point"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            />

    </com.google.android.material.textfield.TextInputLayout>


    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/yanfa_tittle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText_account"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/image_is_blank" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="#1565C0"
        android:text="@string/forget_password"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        app:layout_constraintLeft_toLeftOf="@+id/textInputEditText_password"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText_password"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="#1565C0"
        android:text="@string/sign_up"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintRight_toRightOf="@+id/textInputEditText_password"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText_password"
         />




</androidx.constraintlayout.widget.ConstraintLayout>