<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <ProgressBar
        android:id="@+id/LoginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.45"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:id="@+id/center_point"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cell_number"
            android:inputType="number"
            android:maxLength="11"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/center_point"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/center_point"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:hint="@string/verification_code"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="24dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_code"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/shape"
        android:text="@string/send_verification_code"
        android:textColor="#ffffff"
        app:layout_constraintLeft_toRightOf="@id/textInputLayout_code"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/center_point"
        app:layout_constraintBottom_toBottomOf="@id/textInputLayout_code"
        android:layout_marginEnd="24dp" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/yanfa_tittle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout_account"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/image_is_blank" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:background="@drawable/shape"
        android:text="@string/join_yanfa"
        android:textColor="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_code"
         />






</androidx.constraintlayout.widget.ConstraintLayout>